调整UI,制作prod.server

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- IOS中禁用将数字识别为电话号码/忽略Android平台中对邮箱地址的识别 -->
     <meta name="format-detection" content="telephone=no, email=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>叮当 Music</title>
+    <title></title>
   </head>
   <body>
     <div id="app"></div>
