--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <!-- IOS中禁用将数字识别为电话号码/忽略Android平台中对邮箱地址的识别 -->
-    <meta name="format-detection" content="telephone=no, email=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title></title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=format-detection content="telephone=no, email=no"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><title></title><link href=/static/css/app.ff223831f53e8435f36ba139d9b79d33.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.914daa2a59f2dc98f8d7.js></script><script type=text/javascript src=/static/js/vendor.5f8532733d79cca56678.js></script><script type=text/javascript src=/static/js/app.0d8ea19e34c98061c39d.js></script></body></html>
